--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.25.0",
+    "axios": "^0.28.0",
+    "frontend": "file:",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
