--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "goalsapp": "file:",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.9"
   }
 }
